correcciones spanish version

--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -70,7 +70,7 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por la falta de conocimiento.</h2>
+              <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por falta de conocimiento.</h2>
               <p>Con la Consulta Crypto aprenderás y entenderás los procesos necesarios para operar de manera segura con criptodivisas.</p>
               <div class="header-button">
                 <a href="#contact" class="btn btn-border-filled">Contáctanos</a>
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="features-text section-header text-center">  
-                <h2 class="section-title">Principles and Values</h2>
+                <h2 class="section-title">Principios and Valores</h2>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
                 <img src="./img/CC_Security.png">
               </div>
               <h4>Seguridad y privacidad</h4>
-              <p>La privacidad y la seguridad son bases del blockchain y no las trato de manera diferente.</p>
+              <p>La privacidad y la seguridad son bases del blockchain y las trato como una prioridad.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -118,7 +118,7 @@
               <div class="icon">
                 <img src="./img/CC_Customer.png">
               </div>
-              <h4>Obsesión por el cliente</h4>
+              <h4>Centrado en el cliente</h4>
               <p>El objetivo es generar experiencias positivas para los clientes.</p>
             </div>
           </div>
@@ -264,7 +264,7 @@
                 <img src="./img/CC_Investigate.png">
               </div>
               <div class="feature-info float-left">
-                <h4>GESTIÓNA RIESGO</h4>
+                <h4>GESTIONA RIESGO</h4>
                 <p>Incluso los traders experimentados pueden perder en malas operaciones si no emplean una gestión de riesgos adecuada o si dejan que sus emociones se interpongan. Te enseñaré y prepararé la cartera para gestionar la gran volatilidad que tiene el mercado de criptodivisas.</p>
               </div>
            </div>
