--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -24,9 +24,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.css">
-    <link rel="stylesheet" href="./css/LineIcons.css">
     <link rel="stylesheet" href="./css/main.css">    
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
   
@@ -201,7 +201,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>PRESENTACIÓN Y SEGURIDAD</h4>
-                 <p>presentación personal a Bitcoin y criptomonedas. Comprenderás los conceptos básicos y la seguridad en torno a las carteras y las plataformas de intercambios.</p>
+                 <p>Presentación personal a Bitcoin y criptomonedas. Comprenderás los conceptos básicos y la seguridad en torno a las carteras y las plataformas de intercambios.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -323,32 +323,32 @@
               <div class="col-md-8">
                 <div class="form-group">
                   <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
-                  <div class="help-block with-errors">Sorry, we couldn't find your name!</div>
+                  <div class="help-block with-errors">Lo siento, el nombre no es válido!</div>
                 </div>                                 
               </div>
               
               <div class="col-md-8">
                 <div class="form-group">
                   <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-                  <div class="help-block with-errors">Sorry, your email is wrong!</div>
+                  <div class="help-block with-errors">Lo siento, el email no es válido!</div>
                 </div>                                 
               </div>
               <div class="col-md-8">
                 <div class="form-group">
-                  <input type="text" placeholder="Phone" id="phone" class="form-control" name="phone">
-                  <div class="help-block with-errors">Sorry, there is an error in your phone number!</div>
+                  <input type="text" placeholder="Teléfono" id="phone" class="form-control" name="phone">
+                  <div class="help-block with-errors">Lo siento, tu teléfono no es válido!</div>
                 </div> 
               </div>
               <div class="col-md-8">
                 <div class="form-group">
                   <input type="checkbox" class="form-control checkbox" id="referral" name="referral">
-                  <span>Referral</span>
+                  <span>Recomendado</span>
                 </div>                                 
               </div>
               <div class="col-md-8">
                 <div class="form-group"> 
-                  <textarea class="form-control" id="message"  name="message" placeholder="Hello, please contact me, I am interested in knowing more." rows="4" required></textarea>
-                  <div class="help-block with-errors">Sorry, we couldn't find your message!</div>
+                  <textarea class="form-control" id="message"  name="message" placeholder="Hola, me gustaría saber más. Por favor, ponte en contacto conmigo." rows="4" required></textarea>
+                  <div class="help-block with-errors">Lo siento, tu mensaje no es válido!</div>
                 </div>
                 <div class="submit-button">
                   <button class="btn btn-common" id="submit" type="submit">Submit</button>
@@ -409,10 +409,10 @@
               <div class="widget">
                 <h3 class="block-title">Coming soon</h3>
                 <ul class="menu">
-                  <li><a href="#">Patreon Group</a></li>
-                  <li><a href="#">Merchandise</a></li>
-                  <li><a href="#">Free Microtrainings</a></li>
-                  <li><a href="#">Conferences</a></li>
+                  <li>Patreon Group</li>
+                  <li>Merchandise</li>
+                  <li>Free Microtrainings</li>
+                  <li>Conferences</li>
                 </ul>
               </div>
             </div>
@@ -425,7 +425,7 @@
                   <li><a href="https://coinmarketcap.com">CoinMarketCap</a></li>
                   <li><a href="https://www.tradingview.com">Trading View</a></li>
                   <li><a href="https://www.casebitcoin.com">Case Bitcoin</a></li>
-                </ul>
+                  </ul>
               </div>
             </div>
 
@@ -435,10 +435,12 @@
                 <ul class="menu">
                     <li><a href="#">contact@consultacrypto.com</a></li>
                     <li><a href="#">+32 472 600 622</a></li>
+                    <li class="rrss"><a href="https://twitter.com/elAmericann"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/juanjosevalenzuela"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
                 <div class="subscribe-area">
+                  <label>Susbcríbete a nuestro newsletter</label>
                   <input type="email" class="form-control" placeholder="Enter Email">
-                  <span id="subscribe"><i class="lni-chevron-right"></i></span>
+                  <span id="subscribe"><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </div>
               </div>
             </div>
@@ -456,7 +458,7 @@
 
     <!-- Go To Top Link -->
     <a href="#" class="back-to-top">
-      <i class="lni-chevron-up"></i>
+      <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a> 
 
     <!-- Preloader -->
