--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,10 +23,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.css">
-    <link rel="stylesheet" href="./css/LineIcons.css">
     <link rel="stylesheet" href="./css/main.css">    
     <link rel="stylesheet" href="./css/responsive.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   
   <body>
@@ -408,10 +407,10 @@
               <div class="widget">
                 <h3 class="block-title">Coming soon</h3>
                 <ul class="menu">
-                  <li><a href="#">Patreon Group</a></li>
-                  <li><a href="#">Merchandise</a></li>
-                  <li><a href="#">Free Microtrainings</a></li>
-                  <li><a href="#">Conferences</a></li>
+                  <li>Patreon Group</li>
+                  <li>Merchandise</li>
+                  <li>Free Microtrainings</li>
+                  <li>Conferences</li>
                 </ul>
               </div>
             </div>
@@ -434,10 +433,12 @@
                 <ul class="menu">
                     <li><a href="#">contact@consultacrypto.com</a></li>
                     <li><a href="#">+32 472 600 622</a></li>
+                    <li class="rrss"><a href="https://twitter.com/elAmericann"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/juanjosevalenzuela"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
                 <div class="subscribe-area">
+                  <label>Subscribe to our newsletter</label>
                   <input type="email" class="form-control" placeholder="Enter Email">
-                  <span id="subscribe"><i class="lni-chevron-right"></i></span>
+                  <span id="subscribe"><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </div>
               </div>
             </div>
@@ -455,7 +456,7 @@
 
     <!-- Go To Top Link -->
     <a href="#" class="back-to-top">
-      <i class="lni-chevron-up"></i>
+      <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a> 
 
     <!-- Preloader -->
