--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -71,7 +71,7 @@
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
               <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por falta de conocimiento.</h2>
-              <p>Con la Consulta Crypto aprenderás y entenderás los procesos necesarios para operar de manera segura con criptodivisas.</p>
+              <p>Con Consulta Crypto aprenderás y entenderás los procesos necesarios para operar de manera segura con criptodivisas.</p>
               <div class="header-button">
                 <a href="#contact" class="btn btn-border-filled">Contáctanos</a>
               </div>
