--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -407,7 +407,7 @@
               <!-- Start Col -->
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
-                <h3 class="block-title">Coming soon</h3>
+                <h3 class="block-title">Próximamente</h3>
                 <ul class="menu">
                   <li><a href="#">Patreon Group</a></li>
                   <li><a href="#">Merchandise</a></li>
@@ -420,7 +420,7 @@
               <!-- Start Col -->
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
-                <h3 class="block-title">Resources</h3>
+                <h3 class="block-title">Recursos</h3>
                 <ul class="menu">
                   <li><a href="https://coinmarketcap.com">CoinMarketCap</a></li>
                   <li><a href="https://www.tradingview.com">Trading View</a></li>
@@ -431,7 +431,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
               <div class="widget">
-                <h3 class="block-title">Contact</h3>
+                <h3 class="block-title">Contacto</h3>
                 <ul class="menu">
                     <li><a href="#">contact@consultacrypto.com</a></li>
                     <li><a href="#">+32 472 600 622</a></li>
