--- a/server/public/index.html
+++ b/server/public/index.html
@@ -407,10 +407,10 @@
               <div class="widget">
                 <h3 class="block-title">Coming soon</h3>
                 <ul class="menu">
-                  <li>Patreon Group</li>
-                  <li>Merchandise</li>
-                  <li>Free Microtrainings</li>
-                  <li>Conferences</li>
+                  <li><a href="javascript:;">Patreon Group</a></li>
+                  <li><a href="javascript:;">Merchandise</a></li>
+                  <li><a href="javascript:;">Free Microtrainings</a></li>
+                  <li><a href="javascript:;">Conferences</a></li>
                 </ul>
               </div>
             </div>
