--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -306,7 +306,7 @@
                 <h2 class="section-title">Ponerse en contacto</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>No dudes en ponerte en contacto conmigo por whatsapp, correo electrónico o por teléfono en cualquier momento.<br/>Las criptomonedas funcionan las 24 horas del día, los 7 días de la semana y queremos estar a la par para nuestros clientes y sus necesidades.</p>
+                  <p>No dudes en ponerte en contacto conmigo por whatsapp, correo electrónico o por teléfono en cualquier momento.<br/>Las criptomonedas funcionan las 24 horas del día, los 7 días de la semana y quiero estar a la par para nuestros clientes y sus necesidades.</p>
                 </div>
               </div> 
             </div>
