--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="features-text section-header text-center">  
-                <h2 class="section-title">Principios and Valores</h2>
+                <h2 class="section-title">Principios y Valores</h2>
             </div>
           </div>
         </div>
