--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -422,9 +422,9 @@
               <div class="widget">
                 <h3 class="block-title">Recursos</h3>
                 <ul class="menu">
-                  <li><a href="https://coinmarketcap.com">CoinMarketCap</a></li>
-                  <li><a href="https://www.tradingview.com">Trading View</a></li>
-                  <li><a href="https://www.casebitcoin.com">Case Bitcoin</a></li>
+                  <li><a href="https://coinmarketcap.com" target="_blank">CoinMarketCap</a></li>
+                  <li><a href="https://www.tradingview.com" target="_blank">Trading View</a></li>
+                  <li><a href="https://www.casebitcoin.com" target="_blank">Case Bitcoin</a></li>
                   </ul>
               </div>
             </div>
