--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -14,8 +14,9 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
+    <meta name="title" content="Consulta Crypto | Learn to operate safely with cryptocurrencies.">
+    <meta name="description" content="Get a personal introduction to Bitcoin and cryptocurrencies. Learn the fundamentals of trading and investment planning. Build and grow your portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Francisco Roca">
     <title>Consulta Crypto</title>
@@ -79,7 +80,7 @@
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12 p-0">
             <div class="intro-img">
-              <img src="./img/home.png" alt="">
+              <img src="./img/home.png" alt="Consulta Crypto Home">
             </div>            
           </div>
         </div> 
@@ -105,7 +106,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Security.png">
+                <img src="./img/CC_Security.png" alt="Consulta Crypto Security">
               </div>
               <h4>Seguridad y privacidad</h4>
               <p>La privacidad y la seguridad son bases del blockchain y las trato como una prioridad.</p>
@@ -116,7 +117,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Customer.png">
+                <img src="./img/CC_Customer.png" alt="Consulta Crypto Customer">
               </div>
               <h4>Centrado en el cliente</h4>
               <p>El objetivo es generar experiencias positivas para los clientes.</p>
@@ -127,7 +128,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Knowledge.png">
+                <img src="./img/CC_Knowledge.png" alt="Consulta Crypto Knowledge">
               </div>
               <h4>Conocimiento y confianza</h4>
               <p>Aprende sobre las Criptomonedas, tecnología Blockchain y los 7 principios de Bitcoin.</p>
@@ -150,7 +151,7 @@
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
             <div class="business-item-img">
-              <img src="./img/about_us.png" class="img-fluid" alt="">
+              <img src="./img/about_us.png" class="img-fluid" alt="About Consulta Crypto">
             </div>
           </div>
           <!-- End Col -->
@@ -197,10 +198,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Security_2.png">
+                <img src="./img/CC_Security_2.png" alt="About Consulta Security">
                </div>
                <div class="feature-info float-left">
-                 <h4>PRESENTACIÓN Y SEGURIDAD</h4>
+                 <h3>PRESENTACIÓN Y SEGURIDAD</h3>
                  <p>Presentación personal a Bitcoin y criptomonedas. Comprenderás los conceptos básicos y la seguridad en torno a las carteras y las plataformas de intercambios.</p>
                </div>
             </div>
@@ -213,10 +214,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Certificate.png">
+                <img src="./img/CC_Certificate.png" alt="About Consulta Certificate">
                </div>
                <div class="feature-info float-left">
-                 <h4>APRENDE FUNDAMENTOS Y CÓMO COMERCIAR</h4>
+                 <h3>APRENDE FUNDAMENTOS Y CÓMO COMERCIAR</h3>
                  <p>Conoce el valor fundamental y el potencial de la tecnología blockchain. Manténgase actualizado con las plataformas de intercambios y sus beneficios (Coinbase, Kraken, Binance, CDC, Celsius, Blockfi y más).</p>
                </div>
             </div>
@@ -229,10 +230,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Calendar.png">
+                <img src="./img/CC_Calendar.png" alt="About Consulta Calendar">
                </div>
                <div class="feature-info float-left">
-                 <h4>PLANIFICA E INVIERTE CON AYUDA</h4>
+                 <h3>PLANIFICA E INVIERTE CON AYUDA</h3>
                  <p>Invertir en algo nuevo puede ser estresante y nunca debes invertir dinero que no estés dispuesto a perder. Le proporcionaremos orientación sobre los principios de inversión basados ​​en nuestra experiencia.</p>
                </div>
             </div>
@@ -245,10 +246,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Chart.png">
+                <img src="./img/CC_Chart.png" alt="About Consulta Chart">
                </div>
                <div class="feature-info float-left">
-                 <h4>CONSTRUYE Y CRECE TU CARTERA</h4>
+                 <h3>CONSTRUYE Y CRECE TU CARTERA</h3>
                  <p>Con más de 8000 criptomonedas, incluyendo Bitcoin, es extremadamente importante el saber elegir sus activos en función del desarrollo y valor de los proyectos.</p>
                </div>
             </div>
@@ -261,10 +262,10 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border1">
               <div class="feature-icon float-left">
-                <img src="./img/CC_Investigate.png">
+                <img src="./img/CC_Investigate.png" alt="About Consulta Investigate">
               </div>
               <div class="feature-info float-left">
-                <h4>GESTIONA RIESGO</h4>
+                <h3>GESTIONA RIESGO</h3>
                 <p>Incluso los traders experimentados pueden perder en malas operaciones si no emplean una gestión de riesgos adecuada o si dejan que sus emociones se interpongan. Te enseñaré y prepararé la cartera para gestionar la gran volatilidad que tiene el mercado de criptodivisas.</p>
               </div>
            </div>
@@ -277,10 +278,10 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border2">
               <div class="feature-icon float-left">
-                <img src="./img/CC_News.png">
+                <img src="./img/CC_News.png" alt="About Consulta News">
               </div>
               <div class="feature-info float-left">
-                <h4>SOPORTE Y CONTENIDO PERSONALIZADO</h4>
+                <h3>SOPORTE Y CONTENIDO PERSONALIZADO</h3>
                 <p>Los miembros de nuestra comunidad cuentan con apoyo adaptado a sus necesidades, así como acceso a reuniones individuales, contenido de calidad y un boletín mensual basado en datos valiosos del mercado.</p>
               </div>
            </div>
@@ -303,10 +304,10 @@
           <div class="col-lg-12">
             <div class="contact-text section-header text-center">  
               <div>   
-                <h2 class="section-title">Ponerse en contacto</h2>
+                <h2 class="section-title">Ponte en contacto</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>No dudes en ponerte en contacto conmigo por whatsapp, correo electrónico o por teléfono en cualquier momento.<br/>Las criptomonedas funcionan las 24 horas del día, los 7 días de la semana y quiero estar a la par para los clientes y sus necesidades.</p>
+                  <p>No dudes en ponerte en contacto conmigo por whatsapp, <a href="mailto:contact@consultacrypto.com">correo electrónico</a> o por teléfono en cualquier momento.<br/>Las criptomonedas funcionan las 24 horas del día, los 7 días de la semana y quiero estar a la par para los clientes y sus necesidades.</p>
                 </div>
               </div> 
             </div>
@@ -373,7 +374,7 @@
           <!-- Start Col -->
           <div class="col-lg-6 col-md-6 col-md-12">
             <div class="contact-img">
-              <img src="./img/contact.png" class="img-fluid" alt="">
+              <img src="./img/contact.png" class="img-fluid" alt="About Consulta Contact">
             </div>
           </div>
           <!-- End Col -->
@@ -433,7 +434,7 @@
               <div class="widget">
                 <h3 class="block-title">Contacto</h3>
                 <ul class="menu">
-                    <li><a href="#">contact@consultacrypto.com</a></li>
+                    <li><a href="mailto:contact@consultacrypto.com">contact@consultacrypto.com</a></li>
                     <li><a href="#">+32 472 600 622</a></li>
                     <li class="rrss"><a href="https://twitter.com/elAmericann"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/juanjosevalenzuela"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
