--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,8 +13,9 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
+    <meta name="title" content="Consulta Crypto | Learn to operate safely with cryptocurrencies.">
+    <meta name="description" content="Get a personal introduction to Bitcoin and cryptocurrencies. Learn the fundamentals of trading and investment planning. Build and grow your portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Francisco Roca">
     <title>Consulta Crypto</title>
@@ -48,8 +49,11 @@
                 <a class="nav-link page-scroll" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#services">About</a>
-              </li>  
+                <a class="nav-link page-scroll" href="#services">Principles and Values</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link page-scroll" href="#about">About me</a>
+              </li>    
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#features">Services</a>
               </li>    
@@ -68,16 +72,16 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Bitcoin and Cryptocurrencies are for everyone.<br/>Don't be left out because you lack the knowledge to invest.</h2>
+              <h1 class="head-title">Bitcoin and Cryptocurrencies are for everyone.<br/>Don't be left out because you lack the knowledge to invest.</h1>
               <p>With Consulta Crypto you will understand every step of the way and feel the confidence to operate safely with cryptocurrencies.</p>
               <div class="header-button">
-                <a href="#contact" class="btn btn-border-filled">Contact Us</a>
+                <a href="#contact" class="btn btn-border-filled page-scroll">Book A Videocall</a>
               </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12 p-0">
             <div class="intro-img">
-              <img src="./img/home.png" alt="">
+              <img src="./img/home.png" alt="Consulta Crypto Home">
             </div>            
           </div>
         </div> 
@@ -93,7 +97,7 @@
         <div class="row">
             <div class="col-lg-12">
               <div class="features-text section-header text-center">  
-                  <h2 class="section-title">Principles and Values</h2>
+                <h2 class="section-title">Principles and Values</h2>
               </div>
             </div>
   
@@ -103,9 +107,9 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Security.png">
+                <img src="./img/CC_Security.png" alt="Consulta Crypto Security">
               </div>
-              <h4>Security & Privacy Fundamentals</h4>
+              <h3>Security & Privacy Fundamentals</h3>
               <p>Privacy and security are foundations of the blockchain and I treat them no differently.</p>
             </div>
           </div>
@@ -114,9 +118,9 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Customer.png">
+                <img src="./img/CC_Customer.png" alt="Consulta Crypto Customer">
               </div>
-              <h4>Customer Centric Obsession</h4>
+              <h3>Customer Centric Obsession</h3>
               <p>The obsession to drive positive customer experiences is at the heart of the business.</p>
             </div>
           </div>
@@ -125,9 +129,9 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <img src="./img/CC_Knowledge.png">
+                <img src="./img/CC_Knowledge.png" alt="Consuta Crypto Knowledge">
               </div>
-              <h4>Build Knowledge & Confidence</h4>
+              <h3>Build Knowledge & Confidence</h3>
               <p>Learn about the 7 principles of Bitcoin, Cryptocurrencies and Blockchain Technology.</p>
             </div>
           </div>
@@ -141,28 +145,28 @@
 
 
     <!-- Business Plan Section Start -->
-    <section id="business-plan">
+    <section id="about">
       <div class="container">
 
         <div class="row">
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
             <div class="business-item-img">
-              <img src="./img/about_us.png" class="img-fluid" alt="">
+              <img src="./img/about_us.png" class="img-fluid" alt="About Consulta Crypto">
             </div>
           </div>
           <!-- End Col -->
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-4">
             <div class="business-item-info">
-              <h3>A little bit about me</h3>
+              <h2>A little bit about me</h2>
               <p>Hello I'm Juan,</p>
               <p>In 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
               <p>At this point of my career, after having worked mostly in Global Finance roles for the past 6 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
               <ul>
                 <li>+7 years working in Corporate Finance</li>
                 <li>+5 years working in Fortune 500 companies</li>
-                <li>+5 years involved in Cryptocurrencies/Blockchain</li>
+                <li>+5 years involved in Cryptocurrencies / Blockchain</li>
               </ul>
             </div>
           </div>
@@ -195,10 +199,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                 <img src="./img/CC_Security_2.png">
+                 <img src="./img/CC_Security_2.png" alt="Consulta Crypto Security">
                </div>
                <div class="feature-info float-left">
-                 <h4>INTRODUCTION & SECURITY</h4>
+                 <h3>INTRODUCTION & SECURITY</h3>
                  <p>Personal introduction to Bitcoin and cryptocurrencies. You will understand the basics as well as security around exchanges and wallets.</p>
                </div>
             </div>
@@ -211,10 +215,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Certificate.png">
+                <img src="./img/CC_Certificate.png" alt="Consulta Crypto Certificate">
                </div>
                <div class="feature-info float-left">
-                 <h4>FUNDAMENTALS & TRADING</h4>
+                 <h3>FUNDAMENTALS & TRADING</h3>
                  <p>Learn about the fundamental value and potential of blockchain. Keep up to date with trading platforms and their benefits (Coinbase, Kraken, Binance, CDC, Celsius, Blockfi and more)</p>
                </div>
             </div>
@@ -227,10 +231,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Calendar.png">
+                <img src="./img/CC_Calendar.png" alt="Consulta Crypto Calendar">
                </div>
                <div class="feature-info float-left">
-                 <h4>PLANNING & INVESTING</h4>
+                 <h3>PLANNING & INVESTING</h3>
                  <p>Investing can be stressful and you should never invest more than you can afford to lose.I will provide you with guidance on investing principles based on my experience.</p>
                </div>
             </div>
@@ -243,10 +247,10 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <img src="./img/CC_Chart.png">
+                <img src="./img/CC_Chart.png" alt="Consulta Crypto Chart">
                </div>
                <div class="feature-info float-left">
-                 <h4>BUILDING & GROWING PORTFOLIO</h4>
+                 <h3>BUILDING & GROWING PORTFOLIO</h3>
                  <p>With over 8000 cryptocurrencies including Bitcoin, it is extremely important how to choose your assets based on value investing and project development.</p>
                </div>
             </div>
@@ -259,10 +263,10 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border1">
               <div class="feature-icon float-left">
-                <img src="./img/CC_Investigate.png">
+                <img src="./img/CC_Investigate.png" alt="Consulta Crypto Investigate">
               </div>
               <div class="feature-info float-left">
-                <h4>ADVISING & RISK MANAGING</h4>
+                <h3>ADVISING & RISK MANAGING</h3>
                 <p>Even experienced traders can lose on bad trades if they fail to employ proper risk management or let their emotions get in the way. I prepare you and your portfolio to absorb the market's volatility.</p>
               </div>
            </div>
@@ -275,10 +279,10 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border2">
               <div class="feature-icon float-left">
-                <img src="./img/CC_News.png">
+                <img src="./img/CC_News.png" alt="Consulta Crypto News">
               </div>
               <div class="feature-info float-left">
-                <h4>PERSONALIZED SUPPORT & CONTENT</h4>
+                <h3>PERSONALIZED SUPPORT & CONTENT</h3>
                 <p>Our community members have support catered to their needs as well as access to one on one meetings, quality content and a monthly newsletter based on valuable market data.</p>
               </div>
            </div>
@@ -304,7 +308,7 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>Feel free to reach me on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and I want to be on par for our customers and their needs.</p>
+                  <p>Feel free to reach me on whatsapp on +32 472 600 622, <a href="mailto:contact@consultacrypto.com">email</a> or by phone at any time. Cryptocurrencies operate 24/7 and I want to be on par for our customers and their needs.</p>
                 </div>
               </div> 
             </div>
@@ -371,7 +375,7 @@
           <!-- Start Col -->
           <div class="col-lg-6 col-md-6 col-md-12">
             <div class="contact-img">
-              <img src="./img/contact.png" class="img-fluid" alt="">
+              <img src="./img/contact.png" class="img-fluid" alt="Consulta Crypto Contact">
             </div>
           </div>
           <!-- End Col -->
@@ -431,7 +435,7 @@
               <div class="widget">
                 <h3 class="block-title">Contact</h3>
                 <ul class="menu">
-                    <li><a href="#">contact@consultacrypto.com</a></li>
+                    <li><a href="mailto:contact@consultacrypto.com">contact@consultacrypto.com</a></li>
                     <li><a href="#">+32 472 600 622</a></li>
                     <li class="rrss"><a href="https://twitter.com/elAmericann"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/juanjosevalenzuela"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
